# flask_web

./: README.md  base.py  build.py  config.py  log.py  main.py  pyproject.toml  router.md  test.sql
common/: jsontools.py  logs.py  result.py
core/: config.py  init_db.py
db/: crud.py  database.py  models.py  schemas.py
models/: crud.py  database.py  models.py  schemas.py
routers/: background.py  oauth2.py  test.py  user.py  user_db.py  websocket.py
static/css/: index.css
templates/: 404.html  index.html  test.html
